--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/test_db
 spring.datasource.username=testuser
 spring.datasource.password=testpass
+server.port=8081
