--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,10 @@
     <properties>
         <java.version>11</java.version>
         <testcontainers.version>1.17.2</testcontainers.version>
+        <aspectj.version>1.8.10</aspectj.version>
+        <allure.results.directory>../allure-results</allure.results.directory>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -106,6 +109,12 @@
             <artifactId>converter-gson</artifactId>
             <version>2.9.0</version>
         </dependency>
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-junit5</artifactId>
+            <version>2.10.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
@@ -160,6 +169,14 @@
                         <version>${aspectj.version}</version>
                     </dependency>
                 </dependencies>
+            </plugin>
+            <plugin>
+                <groupId>io.qameta.allure</groupId>
+                <artifactId>allure-maven</artifactId>
+                <version>2.10.0</version>
+                <configuration>
+                    <reportVersion>2.14.0</reportVersion>
+                </configuration>
             </plugin>
         </plugins>
     </build>
