--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,11 @@
             <version>2.10.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-rest-assured</artifactId>
+            <version>2.18.1</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
